; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_filemodes.c_test_index_filemodes__explicit.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_filemodes.c_test_index_filemodes__explicit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"core.filemode\00", align 1
@GIT_FILEMODE_BLOB = common dso_local global i32 0, align 4
@GIT_FILEMODE_BLOB_EXECUTABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_index_filemodes__explicit() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @g_repo, align 4
  %3 = call i32 @cl_repo_set_bool(i32 %2, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 0)
  %4 = load i32, i32* @g_repo, align 4
  %5 = call i32 @git_repository_index(i32** %1, i32 %4)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32*, i32** %1, align 8
  %8 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %9 = call i32 @add_entry_and_check_mode(i32* %7, i32 1, i32 %8)
  %10 = load i32*, i32** %1, align 8
  %11 = load i32, i32* @GIT_FILEMODE_BLOB_EXECUTABLE, align 4
  %12 = call i32 @add_entry_and_check_mode(i32* %10, i32 1, i32 %11)
  %13 = load i32*, i32** %1, align 8
  %14 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %15 = call i32 @add_entry_and_check_mode(i32* %13, i32 1, i32 %14)
  %16 = load i32*, i32** %1, align 8
  %17 = load i32, i32* @GIT_FILEMODE_BLOB_EXECUTABLE, align 4
  %18 = call i32 @add_entry_and_check_mode(i32* %16, i32 0, i32 %17)
  %19 = load i32*, i32** %1, align 8
  %20 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %21 = call i32 @add_entry_and_check_mode(i32* %19, i32 0, i32 %20)
  %22 = load i32*, i32** %1, align 8
  %23 = call i32 @git_index_free(i32* %22)
  ret void
}

declare dso_local i32 @cl_repo_set_bool(i32, i8*, i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_index(i32**, i32) #1

declare dso_local i32 @add_entry_and_check_mode(i32*, i32, i32) #1

declare dso_local i32 @git_index_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
